Mineria 1.3 for mc 1.17.1
IMPORTANT : This is still work-in-progress and some features are absent  because they need to be redone.
Started upgrading minecraft version from 1.16.5 to 1.17.1. This version will not be long-term supported and is just a step in upgrading to 1.18.