@@ -3,23 +3,26 @@ package com.mineria.mod.common.blocks;
 import com.google.common.collect.Lists;
 import com.mineria.mod.common.init.MineriaBlocks;
 import com.mineria.mod.common.init.MineriaItems;
-import net.minecraft.block.*;
-import net.minecraft.block.material.Material;
-import net.minecraft.enchantment.Enchantments;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.Hand;
-import net.minecraft.util.Util;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.BlockRayTraceResult;
-import net.minecraft.world.World;
-import net.minecraftforge.fml.RegistryObject;
+import net.minecraft.Util;
+import net.minecraft.core.BlockPos;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.enchantment.Enchantments;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.SoundType;
+import net.minecraft.world.level.block.state.BlockBehaviour;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.Material;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraftforge.fmllegacy.RegistryObject;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class DebugBlock extends Block
 {
@@ -28,13 +31,13 @@ public class DebugBlock extends Block
 
     public DebugBlock()
     {
-        super(AbstractBlock.Properties.of(Material.STONE).strength(-1, 3600000).sound(SoundType.ANCIENT_DEBRIS).noDrops().isValidSpawn((a, b, c, d) -> false));
+        super(BlockBehaviour.Properties.of(Material.STONE).strength(-1, 3600000).sound(SoundType.ANCIENT_DEBRIS).noDrops().isValidSpawn((a, b, c, d) -> false));
     }
 
     @Override
-    public ActionResultType use(BlockState state, World world, BlockPos pos, PlayerEntity player, Hand hand, BlockRayTraceResult hit)
+    public InteractionResult use(BlockState state, Level world, BlockPos pos, Player player, InteractionHand hand, BlockHitResult hit)
     {
-        if(!world.isClientSide && player.getItemInHand(Hand.MAIN_HAND).isEmpty())
+        if(!world.isClientSide && player.getItemInHand(InteractionHand.MAIN_HAND).isEmpty())
         {
             BlockPos startPos = pos.offset(-ZONE_WIDTH / 2, 0, -ZONE_WIDTH / 2);
 
@@ -45,13 +48,13 @@ public class DebugBlock extends Block
             player.addItem(enchantItemStack(MineriaItems.LONSDALEITE_AXE));
             player.addItem(enchantItemStack(MineriaItems.LONSDALEITE_SHOVEL));
 
-            return ActionResultType.sidedSuccess(false);
+            return InteractionResult.sidedSuccess(false);
         }
 
-        return ActionResultType.PASS;
+        return InteractionResult.PASS;
     }
 
-    private void setAir(World world, BlockPos pos)
+    private void setAir(Level world, BlockPos pos)
     {
         for(int y = 0; y < ZONE_HEIGHT; y++)
         {
@@ -67,9 +70,9 @@ public class DebugBlock extends Block
         }
     }
 
-    private void setAllBlocks(World world, BlockPos pos)
+    private void setAllBlocks(Level world, BlockPos pos)
     {
-        List<BlockState> states = MineriaBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).filter(block -> block != this).map(Block::defaultBlockState).collect(Collectors.toList());
+        List<BlockState> states = MineriaBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).filter(block -> block != this).map(Block::defaultBlockState).toList();
         List<BlockPos> posList = Lists.newArrayList();
 
         for(int y = 0; y < ZONE_HEIGHT; y += 4)
@@ -88,7 +91,7 @@ public class DebugBlock extends Block
     private ItemStack enchantItemStack(Item item)
     {
         ItemStack stack = new ItemStack(item);
-        stack.setTag(Util.make(new CompoundNBT(), nbt -> nbt.putBoolean("Unbreakable", true)));
+        stack.setTag(Util.make(new CompoundTag(), nbt -> nbt.putBoolean("Unbreakable", true)));
         stack.enchant(Enchantments.BLOCK_EFFICIENCY, 200);
         return stack;
     }
