@@ -1,10 +1,10 @@
 package com.mineria.mod.mixin;
 
-import net.minecraft.item.ItemGroup;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.PotionItem;
-import net.minecraft.potion.PotionUtils;
-import net.minecraft.util.NonNullList;
+import net.minecraft.world.item.CreativeModeTab;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.PotionItem;
+import net.minecraft.world.item.alchemy.PotionUtils;
+import net.minecraft.core.NonNullList;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
@@ -18,9 +18,9 @@ import java.util.stream.Collectors;
 public class PotionItemMixin
 {
     @Inject(method = "fillItemCategory", at = @At("TAIL"))
-    public void fillItemCategory(ItemGroup group, NonNullList<ItemStack> stacks, CallbackInfo ci)
+    public void fillItemCategory(CreativeModeTab group, NonNullList<ItemStack> stacks, CallbackInfo ci)
     {
-        List<ItemStack> filteredStacks = stacks.stream().filter(stack -> !PotionUtils.getPotion(stack).getRegistryName().getNamespace().equals("mineria")).collect(Collectors.toList());
+        List<ItemStack> filteredStacks = stacks.stream().filter(stack -> !PotionUtils.getPotion(stack).getRegistryName().getNamespace().equals("mineria")).toList();
         stacks.clear();
         stacks.addAll(filteredStacks);
     }
